@@ -35,11 +35,11 @@
 
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>  It is
 compatible with all versions of ocaml >= 4.00.0, and (theoretically)
-compatible with all versions of ocaml from 1.07 to 4.11.0 (when they
+compatible with all versions of ocaml from 1.07 to 4.11.1 (when they
 compile), and jocaml 3.12.0 to 3.12.1, though the latter is not
 tested.</p>
 
-<p>The current distributed version is <b>7.12</b> (released 2020-05-29).</p>
+<p>The current distributed version is <b>7.13</b> (released 2020-09-03).</p>
 
 <p>
 <a href="README.md">README</a><br/>
@@ -57,7 +57,7 @@ tested.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel712.tar.gz">camlp5-rel712.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel713.tar.gz">camlp5-rel713.tar.gz</a>.</p>
 
 Alternatively, checkout the Git repository from:
   <a href="https://github.com/camlp5/camlp5">camlp5/camlp5</a>
