@@ -1,3 +1,9 @@
+Camlp5 Version 7.13:
+--------------------
+
+* [04 Sep 20] Support for Ocaml 4.10.1.
+* [03 Sep 20] Support for Ocaml 4.11.1.
+
 Camlp5 Version 7.12:
 --------------------
 
